infrastructure/kubernetes/server/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-tellme-server
  namespace: prod-tellme
  labels:
    run: service-tellme-server
spec:
  ports:
    - port: 4000
      targetPort: 4000
      protocol: TCP
  selector:
    run: deployment-tellme-server
